--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.462.0",
+    "openai": "^4.76.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
